[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/GameUI/physicalMenu/physicalPartBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GameUI/physicalMenu/physicalMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/GameUI/physicalMenu/physicalMenuAttributes.gd" type="Script" id=4]

[node name="physicalMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Panel" parent="."]
margin_left = 410.0
margin_top = 190.0
margin_right = 1510.0
margin_bottom = 890.0
rect_min_size = Vector2( 1100, 700 )
theme = ExtResource( 1 )

[node name="vAlign" type="VBoxContainer" parent="back"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="ColorRect" parent="back/vAlign"]
margin_right = 1100.0
margin_bottom = 64.0
rect_min_size = Vector2( 1100, 64 )
size_flags_horizontal = 3
color = Color( 0.25098, 0.25098, 0.25098, 1 )

[node name="Label" type="Label" parent="back/vAlign/top"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.5
margin_right = 160.0
margin_bottom = 12.5
theme = ExtResource( 1 )
text = "Physical Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hAlign" type="HBoxContainer" parent="back/vAlign"]
margin_top = 68.0
margin_right = 1100.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stats" type="VBoxContainer" parent="back/vAlign/hAlign"]
margin_right = 364.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="title" type="Label" parent="back/vAlign/hAlign/stats"]
margin_right = 364.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Player's Stats"

[node name="might" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 29.0
margin_right = 364.0
margin_bottom = 54.0
theme = ExtResource( 1 )
text = "Might:"

[node name="hardy" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 58.0
margin_right = 364.0
margin_bottom = 83.0
theme = ExtResource( 1 )
text = "Hardy:"

[node name="agility" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 87.0
margin_right = 364.0
margin_bottom = 112.0
theme = ExtResource( 1 )
text = "Agility: "

[node name="aware" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 116.0
margin_right = 364.0
margin_bottom = 141.0
theme = ExtResource( 1 )
text = "Aware: "

[node name="intel" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 145.0
margin_right = 364.0
margin_bottom = 170.0
theme = ExtResource( 1 )
text = "Intel: "

[node name="spirit" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 174.0
margin_right = 364.0
margin_bottom = 199.0
theme = ExtResource( 1 )
text = "Spirit:"

[node name="will" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 203.0
margin_right = 364.0
margin_bottom = 228.0
theme = ExtResource( 1 )
text = "Will:"

[node name="luck" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 232.0
margin_right = 364.0
margin_bottom = 257.0
theme = ExtResource( 1 )
text = "Luck"

[node name="fame" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 261.0
margin_right = 364.0
margin_bottom = 286.0
theme = ExtResource( 1 )
text = "Fame:"

[node name="accept" type="Label" parent="back/vAlign/hAlign/stats"]
margin_top = 290.0
margin_right = 364.0
margin_bottom = 315.0
theme = ExtResource( 1 )
text = "Accept:"

[node name="parts" type="VBoxContainer" parent="back/vAlign/hAlign"]
margin_left = 368.0
margin_right = 732.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="physicalPartBox" parent="back/vAlign/hAlign/parts" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 364.0
margin_bottom = 64.0

[node name="physicalPartBox2" parent="back/vAlign/hAlign/parts" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 364.0
margin_bottom = 132.0

[node name="other" type="VBoxContainer" parent="back/vAlign/hAlign"]
margin_left = 736.0
margin_right = 1100.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
